@@ -560,8 +560,8 @@ version of the specification.
 
 =head2 output_format
 
-One of: C<flag>, C<basic>, C<detailed>, C<verbose>, C<terse>. Defaults to C<basic>. Passed to
-L<JSON::Schema::Draft201909::Result/output_format>.
+One of: C<flag>, C<basic>, C<strict_basic>, C<detailed>, C<verbose>, C<terse>. Defaults to C<basic>.
+Passed to L<JSON::Schema::Draft201909::Result/output_format>.
 
 =head2 short_circuit
 
@@ -775,7 +775,7 @@ To date, missing components (some of which are optional, but still quite useful)
 * loading schema documents from disk
 * loading schema documents from the network
 * loading schema documents from a local web application (e.g. L<Mojolicious>)
-* additional output formats beyond C<flag>, C<basic> and C<terse>
+* additional output formats beyond C<flag>, C<basic>, C<strict_basic>, and C<terse>
   (L<https://json-schema.org/draft/2019-09/json-schema-core.html#rfc.section.10>)
 * examination of the C<$schema> keyword for deviation from the standard metaschema, including
   changes to vocabulary behaviour
@@ -783,7 +783,8 @@ To date, missing components (some of which are optional, but still quite useful)
 Additionally, some small errors in the specification (which have been fixed in the next draft
 specification version) are fixed here rather than implementing the precise but unintended behaviour,
 most notably in the use of json pointers rather than fragment-only URIs in C<instanceLocation> and
-C<keywordLocation> in annotations and errors.
+C<keywordLocation> in annotations and errors. (Use the C<strict_basic>
+L<JSON::Schema::Draft201909/output_format> to revert this change.)
 
 =head1 SECURITY CONSIDERATIONS
 
