@@ -41,6 +41,7 @@ has annotation => (
 sub TO_JSON {
   my $self = shift;
   return +{
+    # note that locations are json pointers, not uri fragments!
     instanceLocation => $self->instance_location,
     keywordLocation => $self->keyword_location,
     !defined($self->absolute_keyword_location) ? ()
@@ -108,6 +109,9 @@ The actual annotation value (which may or may not be a string).
 
 Returns a data structure suitable for serialization. Corresponds to one output unit as specified in
 L<https://json-schema.org/draft/2019-09/json-schema-core.html#rfc.section.10.4.2> and
-L<https://json-schema.org/draft/2019-09/output/schema>.
+L<https://json-schema.org/draft/2019-09/output/schema>, except that C<instanceLocation> and
+C<keywordLocation> are json pointers, B<not> URI fragments. (See the
+C<strict_basic> L<JSON::Schema::Draft201909/output_format>
+if the distinction is important to you.)
 
 =cut
