@@ -355,4 +355,84 @@ foreach my $keyword (qw(unevaluatedItems unevaluatedProperties)) {
   );
 }
 
+subtest 'strict_basic' => sub {
+  # see "JSON pointer escaping" in t/errors.t
+
+  cmp_deeply(
+    JSON::Schema::Draft201909->new(output_format => 'strict_basic')->evaluate(
+      { '{}' => { 'my~tilde/slash-property' => 1 } },
+      {
+        '$id' => 'foo.json',
+        properties => {
+          '{}' => {
+            properties => {
+              'my~tilde/slash-property' => false,
+            },
+            patternProperties => {
+              '/' => { minimum => 6 },
+              '[~/]' => { minimum => 7 },
+              '~' => { minimum => 5 },
+              '~.*/' => false,
+            },
+          },
+        },
+      },
+    )->TO_JSON,
+    {
+      valid => false,
+      errors => [
+        {
+          instanceLocation => '#/%7B%7D/my~0tilde~1slash-property',
+          keywordLocation => '#/properties/%7B%7D/properties/my~0tilde~1slash-property',
+          absoluteKeywordLocation => 'foo.json#/properties/%7B%7D/properties/my~0tilde~1slash-property',
+          error => 'property not permitted',
+        },
+        {
+          instanceLocation => '#/%7B%7D',
+          keywordLocation => '#/properties/%7B%7D/properties',
+          absoluteKeywordLocation => 'foo.json#/properties/%7B%7D/properties',
+          error => 'not all properties are valid',
+        },
+        {
+          instanceLocation => '#/%7B%7D/my~0tilde~1slash-property',
+          keywordLocation => '#/properties/%7B%7D/patternProperties/~1/minimum',  # /
+          absoluteKeywordLocation => 'foo.json#/properties/%7B%7D/patternProperties/~1/minimum',  # /
+          error => 'value is smaller than 6',
+        },
+        {
+          instanceLocation => '#/%7B%7D/my~0tilde~1slash-property',
+          keywordLocation => '#/properties/%7B%7D/patternProperties/%5B~0~1%5D/minimum',  # [~/]
+          absoluteKeywordLocation => 'foo.json#/properties/%7B%7D/patternProperties/%5B~0~1%5D/minimum',  # [~/]
+          error => 'value is smaller than 7',
+        },
+        {
+          instanceLocation => '#/%7B%7D/my~0tilde~1slash-property',
+          keywordLocation => '#/properties/%7B%7D/patternProperties/~0/minimum',  # ~
+          absoluteKeywordLocation => 'foo.json#/properties/%7B%7D/patternProperties/~0/minimum',  # ~
+          error => 'value is smaller than 5',
+        },
+        {
+          instanceLocation => '#/%7B%7D/my~0tilde~1slash-property',
+          keywordLocation => '#/properties/%7B%7D/patternProperties/~0.*~1', # ~.*/
+          absoluteKeywordLocation => 'foo.json#/properties/%7B%7D/patternProperties/~0.*~1', # ~.*/
+          error => 'property not permitted',
+        },
+        {
+          instanceLocation => '#/%7B%7D',
+          keywordLocation => '#/properties/%7B%7D/patternProperties',
+          absoluteKeywordLocation => 'foo.json#/properties/%7B%7D/patternProperties',
+          error => 'not all properties are valid',
+        },
+        {
+          instanceLocation => '#',
+          keywordLocation => '#/properties',
+          absoluteKeywordLocation => 'foo.json#/properties',
+          error => 'not all properties are valid',
+        },
+      ],
+    },
+    'strict_basic turns json pointers into URIs, including uri escapes',
+  );
+};
+
 done_testing;
