@@ -3,6 +3,8 @@ Revision history for JSON-Schema-Draft201909
 {{$NEXT}}
           - [Pp]roperties$ keywords now always produce annotations when
             evaluating successfully, even if there were no matching properties
+          - added the "strict_basic" output format, for strict (but incorrect)
+            adherence to the draft 2019-09 specification
 
 0.020     2021-01-02 17:12:09Z
           - the default value for "validate_formats" is now true, to reflect
